# simbridge

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  simbridge-server.service  simbridge.desktop  uninstall.sh
.github/workflows/: release.yml
bridge/: Cargo.toml
bridge/src/: codemasters.rs  main.rs  shm.rs
bridge/src/games/: beamng.rs  kunos.rs  mod.rs  rfactor2.rs
scripts/: launch.sh  simbridge-launch  test-listener.py
server/: Cargo.toml
server/src/: audio.rs  config.rs  dashboard.rs  main.rs  persistence.rs  pulse.rs  telemetry.rs
server/static/: admin.html  index.html  lite.html  rally.html  rally_lite.html
shared/: Cargo.toml
shared/src/: lib.rs
