[package]
name = "simbridge-server"
version = "0.1.0"
edition = "2021"
description = "Linux half — dashboard + haptic audio from telemetry"

[[bin]]
name = "simbridge-server"
path = "src/main.rs"

[dependencies]
simbridge-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
